# adoptium-jenkins-scripts

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-quality.yml
config/: jobs-platform-info.json
scripts/: README.create_release_issue.md  README.extract_remote_triggers.md  README.get_console.md  README.md  create_release_issue.py  extract_remote_triggers.py  get_console.py  get_spawned.py
tests/: test_get_console.py  test_get_spawned.py
